# blink

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compile  compose.yaml  dune  dune-project  makefile  todo.txt
backend/: .clang-format  CMakeLists.txt  ast.cpp  ast.h  builder  main.cpp
backend/ast/: decl.hpp  expr.hpp  ops.hpp  stmt.hpp  types.hpp
backend/include/ast/: decl.h  exp.h  node.h  prog.h  stmt.h  types.h
backend/include/bridge/: decl.h  exp.h  prog.h  stmt.h  types.h
backend/include/codegen/: decl.h  exp.h  generator.h  lvalue.h  stmt.h  types.h
backend/include/codegen_old/: decl.h  generator.h  stmt.h
backend/include/util/: constants.h  debug.h  print.h
backend/ir/: ast.cpp  oldast.cpp
backend/ocaml/: convert.hpp  convert_expr.cpp  convert_stmt.cpp  convert_ty.cpp
backend/src/ast/: decl.cpp  exp.cpp  prog.cpp  stmt.cpp  types.cpp
backend/src/bridge/: decl.cpp  exp.cpp  prog.cpp  stmt.cpp  types.cpp
backend/src/codegen/: decl.cpp  exp.cpp  generator.cpp  lvalue.cpp  stmt.cpp  types.cpp
backend/src/codegen_old/: stmt.cpp  types.cpp
backend/src/util/: print.cpp
examples/: annotations.bl  bug.bl  chained.bl  class.bl  default.bl  double_loop.bl  foreach.bl  infer.bl  lambda.bl  matrix.bl  pemdas.bl  poc.bl  simple.bl  simple_lambda.bl  simple_loop.bl  sum.bl  super_simple.bl  switch.bl  temp.bl  test.bl  upcast.bl
frontend/: blink.opam  dune-project  output  output.ll  output.txt
frontend/lib/cuda/: old_desugar.ml
frontend/src/: blink.ml  compiler.ml  dune
frontend/src/ast/: ast.ml  dune
frontend/src/desugaring/: conversions.ml  desugar.ml  desugar_class.ml  desugar_exp.ml  desugar_lambdas.ml  desugar_stmt.ml  desugar_util.ml  desugared_ast.ml  dune  liveness.ml  old_desugar.ml  pprint_desugared_ast.ml
frontend/src/parsing/: dune  lexer.mll  parse.ml  parser.mly
frontend/src/typing/: conversions.ml  dune  pprint_typed_ast.ml  tctxt.ml  type.ml  type_exp.ml  type_exp.mli  type_stmt.ml  type_util.ml  typechecker.ml  typed_ast.ml
frontend/src/util/: constants.ml  constants.mli  dune  optimization_level.ml  optimization_level.mli  range.ml  range.mli
frontend/test/: backend_fixture_compiler.ml  backend_tests.ml  dune  e2e.ml  frontend_tests.ml  native_test_support.ml  test_desugaring.ml  test_parsing.ml  test_typing.ml  typing.ml  util.ml
lib/util/: dune  range.ml  range.mli
src/: ast.ml  astlib.ml  blink.ml  compiler.ml  desugar.ml  dune  lexer.mll  parser.mly  tctxt.ml  typechecker.ml
src/ast/: ast.ml  astlib.ml  dune
src/ir/: ast.cpp
src/parsing/: dune  lexer.mll  parse_blink.ml  parser.mly
src/typing/: tctxt.ml  typechecker.ml
src/util/: astlib.ml  dune
tests/: array_in_class.bl  inlined.bl  nested_class.bl
