(lang dune 3.12)
(name blink)
(generate_opam_files true)
(using menhir 2.1)

(package
 (name blink)
 (synopsis "Blink compiler")
 (depends
  ;; base compiler and build tools
  (ocaml (>= 4.14.0))
  dune
  menhir
  
  ;; useful libs
  core
  core_unix
  zarith
  fmt
  
  ;; ppxs
  ppx_jane
  ppx_deriving
  ppx_js_style
  bisect_ppx
  
  ;; test tools
  (ounit2 :with-test)
 ))