; (library
;  (name blink)
;  (modules lexer parser ast astlib desugar typechecker tctxt)
;  (libraries util))
 
(ocamllex lexer)
(menhir (modules parser))

; the next line avoids warnings from stopping the build
(env
  (dev
   (flags (:standard -warn-error -A))))

(executable
 (name    blink)      ; name of the opam library
 (public_name blink)  ; required for generating documentation
 (modules blink lexer parser ast astlib desugar tctxt typechecker)
 (libraries util)
 (promote (until-clean))
 ;; (wrapped      false) ; true by default
)
