
(executable
 (name blink)
 (modules blink)
 (libraries core core_unix core_unix.sys_unix core_unix.command_unix fmt compiler desugaring)
 (preprocess
  (pps ppx_jane bisect_ppx --conditional))
 (lint
  (pps ppx_js_style -annotated-ignores -styler -pretty -dated-deprecation)))


(library
 (public_name blink)
 (name compiler)
 (modules compiler)
 (libraries core parsing typing util desugaring)
 (preprocess
  (pps ppx_jane bisect_ppx --conditional))
 (lint
  (pps ppx_js_style -annotated-ignores -styler -pretty -dated-deprecation)))