(library
 (name desugaring)
 (public_name blink.desugaring)
 (preprocess
  (pps ppx_deriving.show))
 (libraries core typing util fmt zarith)
  (foreign_archives ../../lib/convert)
 (modes byte native)
 (c_library_flags
  (:standard
   -lstdc++
   -stdlib=libc++
   -Wl,--start-group
   -Wl,--whole-archive
   -Wl,--no-whole-archive
   -Wl,--end-group
   -lgmp
   -lgmpxx
   ; All necessary LLVM libs
   -lLLVMWindowsManifest
   -lLLVMXRay
   -lLLVMLibDriver
   -lLLVMDlltoolDriver
   -lLLVMCoverage
   -lLLVMLineEditor
   -lLLVMXCoreDisassembler
   -lLLVMXCoreCodeGen
   -lLLVMXCoreDesc
   -lLLVMXCoreInfo
   -lLLVMX86TargetMCA
   -lLLVMX86Disassembler
   -lLLVMX86AsmParser
   -lLLVMX86CodeGen
   -lLLVMX86Desc
   -lLLVMX86Info
   -lLLVMWebAssemblyDisassembler
   -lLLVMWebAssemblyAsmParser
   -lLLVMWebAssemblyCodeGen
   -lLLVMWebAssemblyDesc
   -lLLVMWebAssemblyUtils
   -lLLVMWebAssemblyInfo
   -lLLVMVEDisassembler
   -lLLVMVEAsmParser
   -lLLVMVECodeGen
   -lLLVMVEDesc
   -lLLVMVEInfo
   -lLLVMSystemZDisassembler
   -lLLVMSystemZAsmParser
   -lLLVMSystemZCodeGen
   -lLLVMSystemZDesc
   -lLLVMSystemZInfo
   -lLLVMSparcDisassembler
   -lLLVMSparcAsmParser
   -lLLVMSparcCodeGen
   -lLLVMSparcDesc
   -lLLVMSparcInfo
   -lLLVMRISCVTargetMCA
   -lLLVMRISCVDisassembler
   -lLLVMRISCVAsmParser
   -lLLVMRISCVCodeGen
   -lLLVMRISCVDesc
   -lLLVMRISCVInfo
   -lLLVMPowerPCDisassembler
   -lLLVMPowerPCAsmParser
   -lLLVMPowerPCCodeGen
   -lLLVMPowerPCDesc
   -lLLVMPowerPCInfo
   -lLLVMNVPTXCodeGen
   -lLLVMNVPTXDesc
   -lLLVMNVPTXInfo
   -lLLVMMSP430Disassembler
   -lLLVMMSP430AsmParser
   -lLLVMMSP430CodeGen
   -lLLVMMSP430Desc
   -lLLVMMSP430Info
   -lLLVMMipsDisassembler
   -lLLVMMipsAsmParser
   -lLLVMMipsCodeGen
   -lLLVMMipsDesc
   -lLLVMMipsInfo
   -lLLVMLanaiDisassembler
   -lLLVMLanaiCodeGen
   -lLLVMLanaiAsmParser
   -lLLVMLanaiDesc
   -lLLVMLanaiInfo
   -lLLVMHexagonDisassembler
   -lLLVMHexagonCodeGen
   -lLLVMHexagonAsmParser
   -lLLVMHexagonDesc
   -lLLVMHexagonInfo
   -lLLVMBPFDisassembler
   -lLLVMBPFAsmParser
   -lLLVMBPFCodeGen
   -lLLVMBPFDesc
   -lLLVMBPFInfo
   -lLLVMAVRDisassembler
   -lLLVMAVRAsmParser
   -lLLVMAVRCodeGen
   -lLLVMAVRDesc
   -lLLVMAVRInfo
   -lLLVMARMDisassembler
   -lLLVMARMAsmParser
   -lLLVMARMCodeGen
   -lLLVMARMDesc
   -lLLVMARMUtils
   -lLLVMARMInfo
   -lLLVMAMDGPUTargetMCA
   -lLLVMAMDGPUDisassembler
   -lLLVMAMDGPUAsmParser
   -lLLVMAMDGPUCodeGen
   -lLLVMAMDGPUDesc
   -lLLVMAMDGPUUtils
   -lLLVMAMDGPUInfo
   -lLLVMAArch64Disassembler
   -lLLVMAArch64AsmParser
   -lLLVMAArch64CodeGen
   -lLLVMAArch64Desc
   -lLLVMAArch64Utils
   -lLLVMAArch64Info
   -lLLVMOrcJIT
   -lLLVMWindowsDriver
   -lLLVMMCJIT
   -lLLVMJITLink
   -lLLVMInterpreter
   -lLLVMExecutionEngine
   -lLLVMRuntimeDyld
   -lLLVMOrcTargetProcess
   -lLLVMOrcShared
   -lLLVMDWP
   -lLLVMDebugInfoLogicalView
   -lLLVMDebugInfoGSYM
   -lLLVMOption
   -lLLVMObjectYAML
   -lLLVMObjCopy
   -lLLVMMCA
   -lLLVMMCDisassembler
   -lLLVMLTO
   -lLLVMPasses
   -lLLVMCFGuard
   -lLLVMCoroutines
   -lLLVMipo
   -lLLVMVectorize
   -lLLVMLinker
   -lLLVMInstrumentation
   -lLLVMFrontendOpenMP
   -lLLVMFrontendOpenACC
   -lLLVMFrontendHLSL
   -lLLVMExtensions
   -lLLVMDWARFLinker
   -lLLVMGlobalISel
   -lLLVMMIRParser
   -lLLVMAsmPrinter
   -lLLVMSelectionDAG
   -lLLVMCodeGen
   -lLLVMObjCARCOpts
   -lLLVMIRPrinter
   -lLLVMInterfaceStub
   -lLLVMFileCheck
   -lLLVMFuzzMutate
   -lLLVMTarget
   -lLLVMScalarOpts
   -lLLVMInstCombine
   -lLLVMAggressiveInstCombine
   -lLLVMTransformUtils
   -lLLVMBitWriter
   -lLLVMAnalysis
   -lLLVMProfileData
   -lLLVMSymbolize
   -lLLVMDebugInfoPDB
   -lLLVMDebugInfoMSF
   -lLLVMDebugInfoDWARF
   -lLLVMObject
   -lLLVMTextAPI
   -lLLVMMCParser
   -lLLVMIRReader
   -lLLVMAsmParser
   -lLLVMMC
   -lLLVMDebugInfoCodeView
   -lLLVMBitReader
   -lLLVMFuzzerCLI
   -lLLVMCore
   -lLLVMRemarks
   -lLLVMBitstreamReader
   -lLLVMBinaryFormat
   -lLLVMTableGen
   -lLLVMSupport
   -lLLVMDemangle
   -lrt
   -ldl
   -lm
   -lz
   -lzstd
   -lxml2)))
